# glacier-devicelock-plugin

./: CMakeLists.txt  devicelock.conf  devicelock.conf.in  devicelock_settings.conf
lib/: CMakeLists.txt  glacierdevicepassword.cpp  glacierdevicepassword.h  libglacierdevicepassword.pc.in
src/: CMakeLists.txt  devicelocking.cpp  devicelocking.h  main.cpp
tests/: CMakeLists.txt
tests/ut_devicepassword/: CMakeLists.txt  ut_devicepassword.cpp  ut_devicepassword.h
